# docs/swagger.json
@@ -69,6 +69,26 @@
                     }
                 }
             }
+        },
+        "/track": {
+            "get": {
+                "description": "Get track",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get track",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/track.GetTrackResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -138,6 +158,34 @@
                     "type": "integer"
                 },
                 "thumb": {
+                    "type": "string"
+                }
+            }
+        },
+        "track.GetTrackResponse": {
+            "type": "object",
+            "properties": {
+                "track": {
+                    "$ref": "#/definitions/track.Track"
+                }
+            }
+        },
+        "track.Track": {
+            "type": "object",
+            "properties": {
+                "artist": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "source": {
+                    "type": "string"
+                },
+                "source_id": {
                     "type": "string"
                 }
             }
